union de codigo

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>11</jdk.version>
-        <spring.version>5.2.22.RELEASE</spring.version>
+        <spring.version>6.0.0</spring.version>
         <servletapi.version>4.0.4</servletapi.version>
         <thymeleaf.spring.version>3.0.15.RELEASE</thymeleaf.spring.version>
         <webjars.version>5.2.0</webjars.version>
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>${servletapi.version}</version>
+            <version>5.0.0</version> <!-- Cambia a 5.0.0 o la versión compatible con Jakarta EE 9 -->
             <scope>provided</scope>
         </dependency>
 
