--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=java-mailer
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=trucotecaoficialgod@gmail.com
-spring.mail.password=iaktkctjwqrdieoi
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.debug=true 
+# Configuración del correo
+application.name=java-mailer
+mail.host=smtp.gmail.com
+mail.port=587
+mail.username=trucotecaoficialgod@gmail.com
+mail.password=tu_contraseña_de_aplicación
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.debug=true
