--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
             <artifactId>angus-mail</artifactId>
             <version>2.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
